--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             UI/UX designer and front-end developer
         </p>
         <div class="button">
+             <button id="change-background">Change Background</button>
             <button class="message-button">Message</button>
             <button class="follow-button following">Follow</button>
         </div>
